# TomatoTimer

./: CHANGELOG.md  CMakeLists.txt  README.md
src/: main.cpp
src/apps/: cli_app.cpp
src/core/: PomodoroSession.cpp  PomodoroSession.h  Timer.cpp  Timer.h
src/platform/: DesktopNotificationService.cpp  DesktopNotificationService.h  INotificationService.h  LinuxNotification.cpp
src/ui/: MainWindow.cpp  MainWindow.h
